# hu-ai-platform-demo

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: architecture.md  data-flow.md  model-card.md
docs/adr/: 001-agno-over-langchain.md  002-uv-package-manager.md  003-azure-managed-identity.md  004-eu-ai-act-guardrails.md
infra/: main.bicep
infra/modules/: ai-search.bicep  container-app.bicep  key-vault.bicep  monitoring.bicep  openai.bicep
sample_data/: ai_minor_curriculum.md  hu_about.md  research_projects.md
scripts/: seed_knowledge.py
src/hu_ai_platform/: cli.py  config.py  main.py
src/hu_ai_platform/agents/: assistant.py  research_team.py
src/hu_ai_platform/api/: dependencies.py
src/hu_ai_platform/api/v1/: router.py
src/hu_ai_platform/api/v1/endpoints/: chat.py  health.py  knowledge.py
src/hu_ai_platform/guardrails/: eu_ai_act.py  language_check.py  pii_filter.py
src/hu_ai_platform/knowledge/: loader.py  vectorstore.py
src/hu_ai_platform/monitoring/: metrics.py  telemetry.py
src/hu_ai_platform/storage/: session.py
src/hu_ai_platform/tools/: curriculum_tool.py  university_search.py
tests/: conftest.py
tests/evaluation/: test_bias.py
tests/integration/: test_api.py
tests/unit/: test_guardrails.py  test_knowledge.py  test_tools.py
